--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <h3>counter</h3>
     </header>
     <div class='wrap-box' id="add-files">
-        <span>
-            <input type="file" id="select-json" accept="application/json" multiple>
-            <input type="submit" id="add-json" value="Parse Json!">
-        </span>
+        <input type="file" id="select-json" accept="application/json" multiple>
+        <input type="submit" id="add-json" value="Parse Json!">
         <ul id="file-list"></ul>
         <button id="remove-file">Remove</button>
     </div>
     <div class='wrap-box' id='parse-options'>
         <h3>Options</h3>
-        <input type="checkbox" name="opt-find" id="find-word-opt">
-        <label for="opt-find">Find and Count Words</label>
-        <input type="checkbox" name="opt-reacts" id="reacts-opt">
-        <label for="opt-reacts">Count Reacts</label>
+        <input type="checkbox" id="find-word-opt">
+        <label for="find-word-opt">Find and Count Words</label>
+        <input type="checkbox" id="reacts-opt">
+        <label for="reacts-opt">Count Reacts</label>
+        <input type="checkbox" id="messages-opt">
+        <label for="messages-opt">Count Messages</label>
     </div>
 
     <div id='result-chart'>
